made smal fix